--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -80,3 +80,16 @@ button:disabled {
 .back-link {
   margin-bottom: 20px;
 }
+.form {
+  padding: 20px;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-left: 41%;
+  margin-top: 40px;
+}
